add_library(sh_config INTERFACE)
target_compile_definitions(sh_config INTERFACE
  SH_CONIFG_GL_VERSION_MAJOR=4
  SH_CONIFG_GL_VERSION_MINOR=5 
  SH_CONFIG_POSITION_ATTRIB_INDEX=0
  SH_CONFIG_TEXCOORD_ATTRIB_INDEX=1
  SH_CONFIG_2D_TEX_ARRAY_BINDING=1
  SH_CONFIG_2D_SHADOW_MAP_TEX_BINDING=5
  SH_CONFIG_MVP_UBO_BINDING=0
  SH_CONFIG_MATERIAL_PARAMS_SSBO_BINDING=2
  SH_CONFIG_MATERIAL_DESCRIPTORS_SSBO_BINDING=3
)

if(REMOTE_BUILD)
  add_custom_target(compile_and_copy_shaders_dirs
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/src
  )
else()
  set(COMPILE_SHADERS ninja -C ${CMAKE_CURRENT_SOURCE_DIR})
  add_custom_target(compile_and_copy_shaders_dirs
    COMMAND ${COMPILE_SHADERS}
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/src
  )
endif()