add_library(sh_config INTERFACE)
target_compile_definitions(sh_config INTERFACE
  VE001_SH_CONIFG_GL_VERSION_MAJOR=4
  VE001_SH_CONIFG_GL_VERSION_MINOR=5 
  
  VE001_SH_CONFIG_ATTRIB_INDEX_POSITION=0
  VE001_SH_CONFIG_ATTRIB_INDEX_TEXCOORD=1

  VE001_SH_CONFIG_TEX_BINDING_MATERIAL_TEXTURES=0
  VE001_SH_CONFIG_TEX_BINDING_DIR_SHADOW_MAPS=1
  VE001_SH_CONFIG_TEX_BINDING_OMNI_DIR_SHADOW_MAPS=2

  VE001_SH_CONFIG_UBO_BINDING_GENERAL=0
  VE001_SH_CONFIG_UBO_BINDING_LIGHTS_DESCRIPTOR=1
  VE001_SH_CONFIG_UBO_BINDING_MESHING_DESCRIPTOR=2

  VE001_SH_CONFIG_SSBO_BINDING_MATERIAL_PARAMS=0
  VE001_SH_CONFIG_SSBO_BINDING_MATERIAL_DESCRIPTORS=1
  VE001_SH_CONFIG_SSBO_BINDING_DIRECTIONAL_LIGHTS=2
  VE001_SH_CONFIG_SSBO_BINDING_POINT_LIGHTS=3
  VE001_SH_CONFIG_SSBO_BINDING_SPOT_LIGHTS=4
  VE001_SH_CONFIG_SSBO_BINDING_VOXEL_DATA=5
  VE001_SH_CONFIG_SSBO_BINDING_MESHING_TEMP=6
  VE001_SH_CONFIG_SSBO_BINDING_MESH_DATA=7
)

if(REMOTE_BUILD)
  add_custom_target(compile_and_copy_shaders_dirs
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/src
  )
else()
  set(COMPILE_SHADERS ninja -C ${CMAKE_CURRENT_SOURCE_DIR})
  add_custom_target(compile_and_copy_shaders_dirs
    COMMAND ${COMPILE_SHADERS}
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/src
  )
endif()